Load ques Dynamic Api and design quiz ques

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Developer  Quiz</title>
   </head>
-  <body>
+  <body class="bg-zinc-300">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
